[package]
authors     = ["Petr Mensik", "Jindrich Zeleny", "Michal Repetny", "Ajuna Network <https://github.com/ajuna-network>"]
description = "Simple NFT pallet for creating tokens which can be auctioned."
edition     = "2021"
homepage    = "https://ajuna.io"
license     = "Apache-2.0"
name        = "pallet-ajuna-nft"
repository  = "https://github.com/ajuna-network/Ajuna"
version     = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
ajuna-common = { default-features = false, path = "../../ajuna-common" }
codec      = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = [ "derive" ], version = "2.1" }
serde      = { version = "1.0.132", features = [ "derive" ] }

frame-benchmarking      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
frame-support           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
frame-system            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-std                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

orml-nft                = { default-features = false, git = "https://github.com/ajuna-network/open-runtime-module-library", rev = "polkadot-v0.9.20" }

[dev-dependencies]
frame-support-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-balances    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking" ]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-std/std",
    "orml-nft/std",
]
try-runtime = [ "frame-support/try-runtime" ]
